made stream window fixed size

--- a/website/style.css
+++ b/website/style.css
@@ -8,9 +8,11 @@ body{
 }
 
 section .stream{
+    background-color: darkslategray;
     width: 600px;
+    height: 482px;
 	margin: auto;
-    margin-bottom: 10px ;
+    margin-bottom: 10px;
 }
 
 section .controls button{
