--- a/website/style.css
+++ b/website/style.css
@@ -9,14 +9,17 @@ body{
 
 section .stream{
     background-color: darkslategray;
-    width: 600px;
-    height: 482px;
+    width: 100%;
+    max-width: 600px;
+    max-height: 482px;
 	margin: auto;
     margin-bottom: 10px;
 }
 
 section .controls button{
-    width: 100px;
+    width: 100%;
+    display: inline;
+    max-width: 100px;
     height: 50px;
     font-size: x-large;
     font-weight: bold;
