--- a/frontend/style.css
+++ b/frontend/style.css
@@ -16,6 +16,14 @@ section .stream{
     margin-bottom: 10px;
 }
 
+div.img {
+  background-image: url('http://172.16.101.169:8080/video');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 482px;
+}
 section .controls button{
     width: 100%;
     display: inline;
@@ -67,11 +75,3 @@ footer .vives-logo img{
 	bottom: 0; 
 	right: 5px; 
 }
-div.img {
-  background-image: url('http://172.16.101.169:8080/video');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 100vw;
-  height: 100vh;
-  }
