--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,23 +7,23 @@ body{
     text-align: center;
 }
 
-section .stream{
+section .streamContainer{
     /* background-color: darkslategray; */
-    width: 100%;
-    max-width: 600px;
-    max-height: 400px;
+    width: 60vh;
+    max-height: 100%;
 	margin: auto;
     margin-bottom: 10px;
 }
 
-div.img {
-  background-image: url('http://172.16.101.169:8080/video');
+#stream {
+  background-image: url('http://172.16.101.191:8000/stream.mjpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
   width: 100%;
   height: 400px;
 }
+
 section .controls button{
     width: 100%;
     display: inline;
