--- a/frontend/style.css
+++ b/frontend/style.css
@@ -33,7 +33,7 @@ section .streamContainer{
 }
 
 #stream {
-  background-image: url('http://172.16.101.191:8000/stream.mjpg');
+  /* background-image: url('http://172.16.101.191:8000/stream.mjpg'); */
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
