--- a/frontend/style.css
+++ b/frontend/style.css
@@ -20,8 +20,12 @@ section .streamContainer{
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 100%;
-  height: 400px;
+  /*width: 100%;*/     /*100%*/
+  height: 400px;     /*400px*/
+}
+
+section {
+    display: inline;
 }
 
 section .controls button{
