--- a/frontend/style.css
+++ b/frontend/style.css
@@ -61,7 +61,6 @@ section .wrapper .sliderContainer{
     background: #d3d3d3;
     transform: rotate(-90deg);
     -webkit-appearance: none;
-    opacity: 1;
 }
 
 .slider:hover{
@@ -75,6 +74,7 @@ section .wrapper .sliderContainer{
     height: 25px;
     background: #008779;
     cursor: pointer;
+    border-radius: 6px;
 }
   
 .slider::-moz-range-thumb {
@@ -82,6 +82,7 @@ section .wrapper .sliderContainer{
     height: 25px;
     background: #008779;
     cursor: pointer;
+    border-radius: 6px;
 }
 
 section .wrapper .whitespace{
