--- a/frontend/style.css
+++ b/frontend/style.css
@@ -38,7 +38,7 @@ section .streamContainer{
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  /*width: 100%;*/     /*100%*/
+  /*width: 100%;     /*100%*/
   height: 400px;     /*400px*/
 }
 
