--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -130,6 +130,33 @@ section .controls button:hover{
 
 section .mode p{
     margin-bottom: 5px;
+    font-size: 24px;
+}
+
+.mode{
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.modi-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.modi-container button{
+    font-size: 28px;
+    width: 210px;
+    border-style: solid;
+    border-radius: 3px;
+}
+
+.modi-container button:focus{
+    font-size: 28px;
+    width: 210px;
+    background: #008779;
+    border-color: #008779;
+    color: white;
 }
 
 footer .logo img{
