--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -146,17 +146,10 @@ section .mode p{
 
 .modi-container button{
     font-size: 28px;
+    height: 50px;
     width: 210px;
     border-style: solid;
     border-radius: 3px;
-}
-
-.modi-container button:focus{
-    font-size: 28px;
-    width: 210px;
-    background: #008779;
-    border-color: #008779;
-    color: white;
 }
 
 footer .logo img{
