--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -33,12 +33,12 @@ section .streamContainer{
 }
 
 #stream {
-  background-image: url('http://172.16.102.12:8000/stream.mjpg');
+  background-image: url('http://172.16.102.76:8000/stream.mjpg');
   cursor: crosshair;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  /*width: 100%;     /*100%*/
+  width: 100%;     /*100%*/
   height: 400px;     /*400px*/
 }
 
