--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -16,6 +16,17 @@ header h1{
     color: ghostwhite;
 }
 
+#coords{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 100px;
+    background-color: #d3d3d3;
+    border-style: solid;
+    border-color: #d3d3d3;
+    border-radius: 3px;
+}
+
 section .wrapper{
     display: grid;
     grid-template-columns: 200px 60vh 200px;
@@ -137,6 +148,17 @@ section .controls button:hover{
 #fire:active{
     color: rgb(255, 91, 91);
     background-color: white;
+}
+
+#turret-angle{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 30px;
+    background-color: #d3d3d3;
+    border-style: solid;
+    border-color: #d3d3d3;
+    border-radius: 3px;
 }
 
 section .mode p{
